  Balancing:
    - Changed all exponential item buff scaling to linear.
    - Changed default sink/generator trade efficiency from 10% to 25%.
    - Reduced default setting "Total Hexes" for Nauvis from 7000 to 5000.
    - Reduced default setting "Total Hexes" for Gleba from 4000 to 1800.
    - Reduced default setting "Total Hexes" for Aquilo from 1800 to 600.
    - Strongbox coins are now based on the maximum achieved net coin production.
        When reaching higher amounts of net coin production, the extra coins that past strongboxes would've given are retroactively given to all players.
    - Rebalanced item values to be less about a planet's stage in the game progression but instead more about actual difficulty of obtainment.
        For example, coal/iron/copper on Vulcanus is now less valuable than on Nauvis, and oil-based products on Fulgora now generally have low values.
    - Item values are now affected by each planet's core challenges:
        Nauvis' items are scaled "normally".
        Vulcanus' items are scaled weakly due to having easy power scaling, plentiful resources, and open building spaces.
        Fulgora's items are scaled strongly due to limited building space and overall complexity of (sustainable) power production.
        Gleba's items are scaled strongly due to item spoilability (requiring special layouts to minimize loss of freshness) and overall complexity of (sustainable) power production.
        Aquilo's items are scaled the strongest due to dependency on interplanetary items (and its distance from other planets) as well as recipe complexity / the number of items and fluids involved in each recipe (since entity heating restricts layouts and sometimes scalability).
  Bugfixes:
    - Fixed coin trade "free proc" bug.
    - Fixed game crashing when attempting to clear the trade quality selector button's selection.