@@ -46,7 +46,7 @@ plague-rocket=Significantly more potent than [item=poison-capsule].
 magmatic-rounds-magazine=Put everything into the incinerator.
 electromagnetic-penetrator=Similar to a kinetic penetrator, but uses advanced EM technology.
 electromagnetic-penetrator-cell=Does not get consumed on use.
-hexadic-resonator=Freely enhances the item buff that is currently the cheapest. Performs this action __plural_for_parameter__1__{1=once|2=twice|rest=__1__ times in total}__.
+hexadic-resonator=Enqueues [font=heading-2][color=green]__1__[.color][.font] free item __plural_for_parameter__1__{1=buff|rest=buffs}__. A free item buff will enhance the item buff that is currently the cheapest, spending no coins!\n\nFree item buffs do not work until the cheapest item buff is cheaper than [font=heading-2][color=green]60x[.color][.font] the [font=default-semibold][color=yellow]net coin production[.color][.font] as measured in your hex rank GUI.\n\n[color=gray]Free item buffs may be queued but will wait for this condition to be met before being applied.[.color]
 
 [entity-name]
 hex-core=Hex Core
