@@ -79,6 +79,7 @@ solver-recipe-count=__1__ recipes found.
 solver-complete=Item value solver complete! All item values have been recalculated.
 solver-already-running=The item value solver is already running.
 solver-timeout=Item value solver aborted (safety timeout). Check the game log for details.
+new-free-item-buffs=Add __1__ to the free item buff queue (__2__ total).
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
